tests/__snapshots__/config-failFast---failFast-isNumber---failFast-false-stderr.snap.txt
Error: Type 'number' is identical to type 'number'.

  1 | import { expect, test } from "tstyche";
  2 | test("is number?", () => {
  3 |   expect<number>().type.not.toBe<number>();
    |                                  ~~~~~~
  4 |   expect<number>().type.not.toBe<number>();
  5 | });
  6 | 

      at ./__typetests__/isNumber.tst.ts:3:34 ❭ is number?

Error: Type 'number' is identical to type 'number'.

  2 | test("is number?", () => {
  3 |   expect<number>().type.not.toBe<number>();
  4 |   expect<number>().type.not.toBe<number>();
    |                                  ~~~~~~
  5 | });
  6 | 

      at ./__typetests__/isNumber.tst.ts:4:34 ❭ is number?

